# cmake_sample_project

./: .editorconfig  .gitignore  CMakeLists.txt  main.cpp
apps/: CMakeLists.txt
apps/appA/: CMakeLists.txt  app_a.cpp
apps/appB/: CMakeLists.txt  app_b.cpp
include/: lib_b.hpp  src_a.hpp  src_b.hpp
include/lib/: lib_a.hpp
include/src/: src_a.hpp
lib/: CMakeLists.txt
lib/libA/: CMakeLists.txt  lib_a.cpp
lib/libB/: CMakeLists.txt  lib_b.cpp
src/: CMakeLists.txt
src/srcA/: CMakeLists.txt  src_a.cpp
src/srcB/: CMakeLists.txt  src_b.cpp
